--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,133 @@
-requests
-zipfile
-pandas
-BeautifulSoup
-BytesIO
-pickle
-json
-re
-streamlit
-datetime
-openpyxl 
+altair==4.2.2
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.0.5
+attrs==21.4.0
+backcall==0.2.0
+backports.zoneinfo==0.2.1
+beautifulsoup4==4.11.1
+bleach==5.0.0
+blinker==1.6
+cachetools==5.3.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.4
+cycler==0.11.0
+Cython==0.29.28
+debugpy==1.6.0
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.4
+et-xmlfile==1.1.0
+executing==0.8.3
+fastapi==0.95.1
+fastjsonschema==2.15.3
+fonttools==4.33.3
+gitdb==4.0.10
+GitPython==3.1.31
+haversine==2.7.0
+idna==3.4
+importlib-metadata==6.1.0
+importlib-resources==5.7.1
+ipykernel==6.13.0
+ipython==8.3.0
+ipython-genutils==0.2.0
+jedi==0.18.1
+Jinja2==3.1.2
+joblib==1.1.0
+jsonschema==4.4.0
+jupyter-client==7.3.0
+jupyter-core==4.10.0
+jupyterlab-pygments==0.2.2
+kiwisolver==1.4.2
+lightgbm==3.3.2
+lxml==4.9.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.1
+matplotlib==3.5.2
+matplotlib-inline==0.1.3
+mdurl==0.1.2
+mistune==0.8.4
+mlxtend==0.19.0
+msvc-runtime==14.28.29910
+nbclient==0.6.2
+nbconvert==6.5.0
+nbformat==5.4.0
+nest-asyncio==1.5.5
+notebook==6.4.11
+numpy==1.22.3
+openpyxl==3.0.9
+packaging==21.3
+pandas==1.4.2
+pandocfilters==1.5.0
+parso==0.8.3
+patsy==0.5.2
+pickleshare==0.7.5
+Pillow==9.1.0
+pmdarima==1.8.5
+prometheus-client==0.14.1
+prompt-toolkit==3.0.29
+protobuf==3.20.3
+psutil==5.9.0
+pure-eval==0.2.2
+pyarrow==11.0.0
+pycparser==2.21
+pydantic==1.10.7
+pydeck==0.8.0
+Pygments==2.14.0
+PyJWT==2.5.0
+Pympler==1.0.1
+pyparsing==3.0.8
+PyQt5==5.15.7
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.11.0
+pyrsistent==0.18.1
+python-certifi-win32==1.6
+python-dateutil==2.8.2
+pytz==2022.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==304
+pywinpty==2.0.5
+pyzmq==22.3.0
+requests==2.28.1
+rich==13.3.3
+scikit-learn==1.0.2
+scipy==1.8.0
+seaborn==0.11.2
+semver==3.0.0
+Send2Trash==1.8.0
+setuptools-scm==6.4.2
+six==1.16.0
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+sqlite-bro==0.9.1
+stack-data==0.2.0
+starlette==0.26.1
+statsmodels==0.13.2
+streamlit==1.20.0
+terminado==0.13.3
+threadpoolctl==3.1.0
+tinycss2==1.1.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.1
+traitlets==5.1.1
+twilio==7.14.2
+typing-extensions==4.5.0
+tzdata==2023.3
+tzlocal==4.3
+urllib3==1.26.9
+validators==0.20.0
+watchdog==3.0.0
+wcwidth==0.2.5
+webencodings==0.5.1
+winpython==4.1.20210417
+wrapt==1.14.1
+xlwings==0.27.7
+xmltodict==0.13.0
+zipp==3.8.0
